# subtitle

./: .gitignore  CMakeLists.txt  LICENSE  README.md
resources/audio/: jfk.pcm
resources/model/: cnn_mnist.onnx
src/: asrapi.cc  asrapi.h  audio_codec.cc  audio_codec.h  audio_recorder.cc  audio_recorder.h  convert_timer.cc  convert_timer.h  lru_queue.cc  lru_queue.h  main.cc  offline_convert_timer.cc  offline_convert_timer.h  packet.h  robot.cc  silero_vad.cc  silero_vad.h  subtitle_window.cc  subtitle_window.h  test.cc  udp_codec.cc  udp_codec.h  utils.cc  utils.h  wav.h
tests/: audio_asr.cc  audio_vad.cc  curl_test.cc  mnist_onnx.cc  opencv.cc  robot.cc  test.cc
